...
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/johndoe"
                        tools:ignore="ContentDescription" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/hello_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:text="@string/name"
                        android:textColor="#000"
...
                        android:background="@drawable/pretty_edit"
                        android:hint="@string/first_name"
                        android:textColorHint="@color/black"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_first_name_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_last_name_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthday"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_birthday_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:focusable="false"
                            android:textColor="@color/black"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/street_code"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_street_code_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/street"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_street_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_city_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/postal_code"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_postal_code_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/country"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_country_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_user_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:drawableLeft="@drawable/ic_save"
                    android:text="@string/ok"
...
