<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.test.africafordata.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_user"
            app:destination="@id/navigation_user" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.test.africafordata.ui.fragments.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />


</navigation>